--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -1,14 +1,14 @@
 <div>
   <ul class="nav nav-tabs">
-    <li class="presentation" [ngClass]="{ active: chosenList === 'all' }">
-      <a (click)="onChoose('all')" style="cursor: pointer">All</a>
+    <li class="presentation" routerLinkActive="active">
+      <a routerLink="/characters/all">All</a>
     </li>
-    <li class="presentation" [ngClass]="{ active: chosenList === 'light' }">
-      <a (click)="onChoose('light')" style="cursor: pointer">Light</a>
+    <li class="presentation">
+      <a routerLink="/characters/light">Light</a>
     </li>
-    <li class="presentation" [ngClass]="{ active: chosenList === 'dark' }">
-      <a (click)="onChoose('dark')" style="cursor: pointer">Dark</a>
+    <li class="presentation">
+      <a routerLink="/characters/dark">Dark</a>
     </li>
   </ul>
-  <app-list [characters]="getCharacters()"></app-list>
+  <router-outlet></router-outlet>
 </div>
